--- a/css/friend.css
+++ b/css/friend.css
@@ -38,3 +38,18 @@
 .friend .chat__timestamp {
   font-size: 12px;
 }
+
+.friend .friend__now-listening {
+  border: 1.5px solid #5aad77;
+  padding: 5px 10px;
+  border-radius: 15px;
+  font-size: 12px;
+}
+
+.friend__now-listening span {
+  opacity: 0.6;
+}
+
+.friend__now-listening i {
+  font-size: 10px;
+}
