--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600&display=swap");
 @import "reset.css";
 @import "status-bar.css";
 @import "header.css";
@@ -6,6 +6,9 @@
 @import "friend.css";
 @import "friends.css";
 @import "find.css";
+@import "more.css";
+@import "settings.css";
+@import "chat.css";
 
 * {
   box-sizing: border-box;
@@ -17,7 +20,7 @@ body {
   color: #020202;
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  height: 1000px;
+  height: 100px;
 }
 
 a {
