--- a/css/chat.css
+++ b/css/chat.css
@@ -6,7 +6,7 @@
   padding: 0px 20px;
 }
 
-.chatroom {
+.chat-screen {
   background-image: url("../images/white_leather.png");
   min-height: 100vh;
 }
@@ -32,22 +32,18 @@
 .chat__write-column:nth-child(2) {
   width: 80%;
 }
-/* .chat__write-column {
-  padding: 20px 10px;
-  width: 100%;
-  border: none;
-  font-size: 14px;
-} */
-
 .chat__write-column input {
-  outline: none;
   padding: 20px 10px;
   width: 100%;
   border: none;
   font-size: 14px;
 }
 
-.chatroom .chat__messages {
+.chat__write-column input:focus {
+  outline: none;
+}
+
+.chat-screen .chat__messages {
   border-top: 1px solid #f7f7f7;
   display: flex;
   flex-direction: column;
@@ -68,15 +64,46 @@
 }
 .message {
   display: flex;
-  align-items: center;
-  width: 100%;
-}
-
-.message .message__content {
-  width: 80%;
+  align-items: flex-start;
+  /* width: 80%; */
+  margin-bottom: 20px;
 }
 
 .incoming-message img {
   width: 30px;
   border-radius: 15px;
+  margin-right: 15px;
+}
+
+.incoming-message {
+  align-self: flex-start;
+}
+
+.sent-message {
+  align-self: flex-end;
+}
+
+.message .message__bubble {
+  background-color: white;
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
+  padding: 10px 20px;
+  border-radius: 20px;
+  display: block;
+  color: white;
+  font-weight: 600;
+}
+.incoming-message .message__author {
+  margin-bottom: 10px;
+  display: block;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.incoming-message .message__bubble {
+  border-bottom-left-radius: 0px;
+  background-image: linear-gradient(to right, #fc00ff, #00dbde);
+}
+.sent-message .message__bubble {
+  border-bottom-right-radius: 0px;
+  background-image: linear-gradient(to left, #00c6ff, #0072ff);
 }
